--- a/package.json
+++ b/package.json
@@ -2,21 +2,31 @@
   "name": "campaign_soundboard",
   "version": "1.0.0",
   "description": "A soundboard app to play music smoothly and sound effects for my DnD campaigns.",
-  "main": "index.js",
+  "author": "Bruce Kristelijn",
   "scripts": {
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps",
     "test": "test"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BruceKristelijn/campaign-soundboard.git"
+  "main": "background.js",
+  "dependencies": {},
+  "devDependencies": {
+    "electron": "^13.0.0",
+    "electron-devtools-installer": "^3.1.0",
+    "vue-cli-plugin-electron-builder": "~2.1.1"
   },
-  "keywords": [
-    "tabletop"
-  ],
-  "author": "Bruce Kristelijn",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/BruceKristelijn/campaign-soundboard/issues"
   },
-  "homepage": "https://github.com/BruceKristelijn/campaign-soundboard#readme"
+  "homepage": "https://github.com/BruceKristelijn/campaign-soundboard#readme",
+  "keywords": [
+    "tabletop"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BruceKristelijn/campaign-soundboard.git"
+  }
 }
