--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A soundboard app to play music smoothly and sound effects for my DnD campaigns.",
   "author": "Bruce Kristelijn",
   "scripts": {
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
+    "build": "vue-cli-service electron:build",
+    "serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "test": "test"
